vulnerability react nextjs

--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.435.0",
     "motion-number": "^0.1.7",
-    "next": "14.2.6",
+    "next": "16.0.10",
     "next-auth": "^5.0.0-beta.20",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
     "next-transition-router": "^0.2.1",
     "openai": "^4.71.0",
-    "react": "^18",
+    "react": "^19.2.3",
     "react-canvas-confetti": "^2.0.7",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18",
+    "react-dom": "^19.2.3",
     "react-dropzone": "^14.2.10",
     "react-email": "^3.0.1",
     "react-hook-form": "^7.53.0",
@@ -79,8 +79,8 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.16.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-simple-maps": "^3.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
@@ -91,5 +91,6 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
-  }
+  },
+  "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
 }
